# rest-core

./: .gitignore  LICENSE  README.md  db.sqlite3  insert_test_records.py  main.py  manage.py  pyproject.toml
app_config/: settings.py  urls.py
blog/: admin.py  models.py  serializers.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_blogpost_title.py
records/: blog_posts.json  subtasks.json  tags.json  todos.json
rest_core/: apps.py
rest_core/build_absolute_uri/: __init__.py  build_absolute_uri.py
rest_core/cache/mixins/: __init__.py  cache_mixin.py
rest_core/django/: views.py
rest_core/email_service/: __init__.py  email_service.py  exceptions.py  types.py  validators.py
rest_core/exceptions/: __init__.py  exceptions.py
rest_core/management/commands/: create_records.py  mock_records.py
rest_core/middlewares/: __init__.py  middlewares.py
rest_core/pagination/: __init__.py  get_paginated_data.py  page_number_pagination.py  paginate_and_serialize_data.py
rest_core/renderers/: __init__.py  json_renderer.py  renderers.py  structured_json_renderer.py
rest_core/response/: __init__.py  response.py  types.py
rest_core/send_email/: builder.py  models.py  send_email.py  services.py  strategies.py  validators.py
rest_core/serializers/: __init__.py  mixins.py  serializers.py
rest_core/serializers/mixins/: __init__.py  file_field_url_mixin.py  file_url_mixin.py  records_creation_mixin.py
rest_core/throttle_inspector/: __init__.py  throttle_inspector.py
rest_core/views/: __init__.py  model_choice_field_api_view.py
rest_core/views/mixins/: __init__.py  choice_field_mixin.py  model_choice_field_mixin.py  model_object_mixin.py
rest_core/viewsets/mixins/: __init__.py  action_message_mixin.py  (+2 more)
todo_app/: admin.py  urls.py
todo_app/migrations/: 0001_initial.py  0002_alter_todo_tags.py  0003_alter_todo_status.py  0004_alter_todo_title.py  0005_alter_todo_status_alter_todo_title.py  0006_alter_todo_status_alter_todo_title.py
todo_app/models/: __init__.py  subtask_model.py  tag_model.py  todo_model.py
todo_app/serializers/: __init__.py  subtask_serializer.py  tag_serializer.py  todo_serializer.py  user_serializer.py
todo_app/validators/: __init__.py  tag_validator.py
todo_app/views/: __init__.py  subtask_view.py  tag_view.py  todo_view.py
(+1 files in other folders)
