[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rest-core"
version = "0.1.0"
description = "Reusable Django app for ..."
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "shailesh pandit", email = "shaileshpandit141@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0"
]

[project.urls]
Homepage = "https://github.com/shaileshpandit141/rest-core"
Repository = "https://github.com/shaileshpandit141/rest-core"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
