[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rest-core"
version = "0.1.10"
description = """
A lightweight Django package to enhance your Django REST Framework (DRF)
APIs with consistent response formatting, smart exception handling, rate-limit
introspection, response time tracking, pagination utilities, EmailService,
mock_records, and enhanced serializers.
"""
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "shailesh pandit", email = "shaileshpandit141@gmail.com" }]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Operating System :: OS Independent",
]
dependencies = [
    "django>=5.2",
    "djangorestframework>=3.16.0",
    "pydantic>=2.11.3",
    "pytz>=2025.2",
]

[project.urls]
Homepage = "https://github.com/shaileshpandit141/rest-core"
Repository = "https://github.com/shaileshpandit141/rest-core"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
